# simfor

./: .gitignore  CMakeLists.txt  Makefile  README.md  install-deps.sh  install-proj  install-simfor.sh
cmake/: doxygen.cmake  simfor-config.cmake.in  simfor.pc.in  utils.cmake
examples/: test_2d.cpp  test_3d.cpp  test_points.cpp
examples/BOOST_ODE/: CMakeLists.txt  boost_bench_sodu.cpp  boost_bench_sodu_mpi.cpp  boost_bench_sodu_omp.cpp  boost_matr_vec.cpp  boost_matr_vec_mpi.cpp  boost_matr_vec_omp.cpp  matrix.txt  odu_func.cpp  plot.py  plot_ode.py  plot_osc.py  sodu_matr.cpp  sodu_test.cpp
examples/MatrixTest/: CMakeLists.txt  cblockEXE.cpp  classicEXE.cpp  classic_ompEXE.cpp  multiplyVectorMatrixEXE.cpp  strassenEXE.cpp  strassen_ompEXE.cpp  strassen_recursiveEXE.cpp  strassen_recursive_ompEXE.cpp
examples/ODE/: CMakeLists.txt  bench_sodu.cpp  bench_sodu_mpi.cpp  bench_sodu_omp.cpp  matrix.hpp  matrix_vector.cpp  matrix_vector_mpi.cpp  matrix_vector_omp.cpp  multMatrixVector.hpp  sodu.cpp  sodu.hpp  vector.hpp
examples/SlauTest/: CMakeLists.txt  GaussExe.cpp  GaussMpiExe.cpp  GaussOmpExe.cpp  GradientsExe.cpp  GradientsMpiExe.cpp  GradientsOmpExe.cpp  LUdecompExe.cpp  LUdecompOmpExe.cpp  SimpleIterExe.cpp  SimpleIterMpiExe.cpp  SimpleIterOmpExe.cpp  TridiagonalExe.cpp  TridiagonalMpiExe.cpp  TridiagonalOmpExe.cpp  ZeidelExe.cpp  ZeidelMpiExe.cpp  ZeidelOmpExe.cpp
examples/SomeClassTest/: CMakeLists.txt  SomeClassTest.cpp
examples/example/: CMakeLists.txt
examples/plotter/: CMakeLists.txt  test_2d.cpp  test_3d.cpp  test_points.cpp
include/simfor/: Gauss.hpp  GaussMpi.hpp  GaussOmp.hpp  Gradients.hpp  GradientsMpi.hpp  GradientsOmp.hpp  LUdecomp.hpp  LUdecompOmp.hpp  SimpleIter.hpp  SimpleIterMpi.hpp  SimpleIterOmp.hpp  SomeClass.hpp  Tridiagonal.hpp  TridiagonalMpi.hpp  TridiagonalOmp.hpp  Vineyard.hpp  Vineyard_omp.hpp  Zeidel.hpp  ZeidelMpi.hpp  ZeidelOmp.hpp  cblock.hpp  cblock_omp.hpp  classic.hpp  classic_omp.hpp  elementary.hpp  multMatrVec.hpp  multMatrixVector.hpp  multiplyVectorMatrix.hpp  odu.hpp  strassen.hpp  strassen_omp.hpp  strassen_recursive.hpp  strassen_recursive_omp.hpp  utilities.hpp  version.hpp
include/simfor/internal/: types.hpp  version.hpp
simfor/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt  simfor-config.cmake  simfor-targets.cmake  simfor.pc  simfor_20240618-1_amd64.deb
simfor/examples/BOOST_ODE/: Makefile  boost_bench_sodu  boost_bench_sodu_mpi  boost_bench_sodu_omp  boost_matr_vec  boost_matr_vec_mpi  boost_matr_vec_omp  cmake_install.cmake  odu_func  sodu_test
simfor/examples/MatrixTest/: Makefile  cblockEXE  classicEXE  classic_ompEXE  cmake_install.cmake  multiplyVectorMatrixEXE  strassenEXE  strassen_ompEXE  strassen_recursiveEXE  strassen_recursive_ompEXE
simfor/examples/ODE/: Makefile  bench_sodu  bench_sodu_mpi  bench_sodu_omp  cmake_install.cmake  matrix_vector  matrix_vector_mpi  matrix_vector_omp
simfor/examples/SlauTest/: GaussExe  GaussMpiExe  GaussOmpExe  GradientsExe  GradientsMpiExe  GradientsOmpExe  LUdecompExe  LUdecompOmpExe  Makefile  SimpleIterExe  SimpleIterMpiExe  SimpleIterOmpExe  TridiagonalExe  TridiagonalMpiExe  TridiagonalOmpExe  ZeidelExe  ZeidelMpiExe  ZeidelOmpExe  cmake_install.cmake
simfor/examples/plotter/: Makefile  cmake_install.cmake
src/: Gauss.cpp  GaussMpi.cpp  GaussOmp.cpp  Gradients.cpp  GradientsMpi.cpp  GradientsOmp.cpp  LUdecomp.cpp  LUdecompOmp.cpp  SimpleIter.cpp  SimpleIterMpi.cpp  SimpleIterOmp.cpp  SomeClass.cpp  Tridiagonal.cpp  TridiagonalMpi.cpp  TridiagonalOmp.cpp  Vineyard.cpp  Vineyard_omp.cpp  Zeidel.cpp  ZeidelMpi.cpp  ZeidelOmp.cpp  cblock.cpp  cblock_omp.cpp  classic.cpp  classic_omp.cpp  elementary.cpp  multiplyVectorMatrix.cpp  odu.cpp  plotter.cpp  strassen.cpp  strassen_omp.cpp  strassen_recursive.cpp  strassen_recursive_omp.cpp
